--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-helmet-async": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "styled-components": "^6.1.11",
     "typescript": "4.9.4",
     "web-vitals": "^2.1.0"
   },
@@ -87,6 +86,8 @@
     "plop": "^4.0.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.12.0",
+    "sass": "^1.77.5",
+    "sass-loader": "^14.2.1",
     "style-loader": "^3.3.1",
     "ts-jest": "29.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
