--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@sentry/webpack-plugin": "^1.18.8",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "^14.2.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/babel__core": "^7.20.5",
     "@types/jest": "^29.5.12",
